# live-bootcamp-project

./: .env  .gitignore  Cargo.toml  compose.build.yml  compose.override.tls.yml  compose.override.yml  compose.yml  generate-local-certs.sh  nginx-acme.conf  nginx.conf  nginx.local.conf  qipio  qipio.yml  run_db.sh  run_docker.sh
.github/workflows/: deploy.yml  prod.yml
app-service/: Cargo.toml  Dockerfile  run_watch.sh
app-service/assets/: app.js
app-service/src/: main.rs
app-service/templates/: index.html
auth-service/: CLAUDE.md  Cargo.toml  Dockerfile  api_schema.yml  run_docker.sh  run_sqlx.sh  run_watch.sh
auth-service/assets/: app.js
auth-service/migrations/: 20250913121751_create_users_table.up.sql
auth-service/src/: lib.rs  main.rs  model.rs  routes.rs
auth-service/src/api/: error.rs  login.rs  logout.rs  mod.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/domain/: data_stores.rs  email_client.rs  mod.rs  types.rs  user.rs
auth-service/src/routes/: helper.rs  login.rs  logout.rs  mod.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: hashmap_2fa_code_store.rs  hashmap_user_store.rs  mod.rs  stdout_email_client.rs
auth-service/src/services/data_stores/: hashmap_banned_token_store.rs  hashmap_user_store.rs  mod.rs  postgres_user_store.rs
auth-service/src/utils/: auth.rs  constants.rs
auth-service/src/validations/: email.rs  password.rs
auth-service/templates/: index.html
auth-service/tests/: integration_tests.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  mod.rs  root.rs  routes.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/tests/http-client/: http-client.env.json  login.http  signup.http
auth-service/tests/services/: mod.rs
auth-service/tests/services/data_stores/: mod.rs  postgres_user_store_tests.rs
deploy-certs/: .gitkeep  fullchain.pem  privkey.pem
