[package]
name = "app-service"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true, features = ["cookie"] }
tower-http = { workspace = true, features = ["fs"] }
axum-server = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
askama = { workspace = true }

