[package]
name = "auth-service"
version = {  workspace = true}
edition = {  workspace = true}

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true}
axum-server = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
derivative = { workspace = true }
validator = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
