[package]
name = "auth-service"
edition = "2021"

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true }
axum-server = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
derivative = { workspace = true }
validator = { workspace = true }
uuid = { workspace = true }
argon2 = { workspace = true }
password-hash = { workspace = true, features = ["rand_core", "std"] }

[dev-dependencies]
reqwest = { workspace = true }
