[package]
name = "auth-service"
edition = "2021"

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true }
axum-server = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
derivative = { workspace = true }
validator = { workspace = true }
uuid = { workspace = true }
argon2 = { workspace = true }
password-hash = { workspace = true, features = ["rand_core", "std"] }
async-trait = { workspace = true }

# Validate email address
email_address = { workspace = true}
# Support mocking of traits
mockall = { workspace = true, optional = true }

[dev-dependencies]
reqwest = { workspace = true }
mockall = { workspace = true }
fake = { workspace = true}
quickcheck = { workspace = true}
quickcheck_macros = { workspace = true}
